--- a/pack.yaml
+++ b/pack.yaml
@@ -1,8 +1,11 @@
-### Place information about your pack version here.
 ---
 ref: witai
 name: witai
 description: Wit AI Integration with StackStorm
-version: 0.1.0
+keywords:
+  - messaging
+  - bots
+  - voice
+version: 0.2.0
 author: James Fryman
 email: james@stackstorm.com
